--- a/app/home/templates/ui-naf5.html
+++ b/app/home/templates/ui-naf5.html
@@ -25,7 +25,7 @@
                     </div>
                     <div class="col-md-12 d-none d-sm-block d-md-block d-lg-none d-block d-sm-none text-center ml-auto mr-auto">
                       <h5>L'iframe ne fonctionne pas sur Mobile et Tablette.  Veuillez-vous connecter à ce
-                        <a href="http://localhost:5000/" target="_blank">website</a>
+                        <a href="temp-plot" target="_blank">website</a> #
                       </h5>
                     </div>
                   </div>
