--- a/app/home/templates/ui-naf5.html
+++ b/app/home/templates/ui-naf5.html
@@ -12,20 +12,20 @@
               <div class="card-header card-header-primary">
                 <h4 class="card-title">Codes NAF5 Predictor</h4>
                 <p class="card-category">
-                  <a target="_blank" href="http://localhost:5000/"></a>
+                  <a target="_blank" href="temp-plot.html"></a>
                 </p>
               </div>
               <div class="row">
                 <div class="col-md-12">
                   <div class="card-body">
                     <div class="iframe-container d-none d-lg-block">
-                      <iframe src="http://localhost:5000/">
+                      <iframe src="temp-plot.html">
                         <p>Votre browser ne supporte pas iframes.</p>
                       </iframe>
                     </div>
                     <div class="col-md-12 d-none d-sm-block d-md-block d-lg-none d-block d-sm-none text-center ml-auto mr-auto">
                       <h5>L'iframe ne fonctionne pas sur Mobile et Tablette.  Veuillez-vous connecter à ce
-                        <a href="temp-plot" target="_blank">website</a> #
+                        <a href="temp-plot.html" target="_blank">website</a> <!--http://localhost:5000/-->
                       </h5>
                     </div>
                   </div>
